2010-05-25  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (clispTemp): remove
	(extract0, extract1, pari-set-component, pari-make-object)
	(convert-from-pari-10, convert-from-pari-11):
	use WITH-C-VAR instead of TEMP
	(pari-mant): extract the common part of PARI-MANTISSA-EFF and
	PARI-MANTISSA and use WITH-C-VAR instead of TEMP
	(pari-mantissa-eff, pari-mantissa): use PARI-MANT
	(collect-mantissa): extract & use (ASH . 32) instead of (* . x100000000)
	(convert-from-pari-1, convert-from-pari-2): use it

2010-05-24  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (symmetric-matrix-perfection): fix declaration
	(MAXVARN): use DEF-C-CONST
	* modules/pari/cpari.c: include <pari/paripriv.h> for GP_DATA
	(init_for_clisp): init GP_DATA for #Z"" i/o

2010-05-24  Sam Steingold  <sds@gnu.org>

	* modules/pari/configure.in: do not check for init_opts
	(LIBS): append "-lm" (required for linking with LIBPARI)
	* modules/pari/cpari.c (init_for_clisp): do not use init_opts

2010-05-23  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/bdb.c (txn_status_check): add DEFCHECKER
	(TXN-CHECK): use it to output stat->st_txnarray->status symbolically
	* modules/berkeley-db/dbi.lisp (db-txn-active): status may be a keyword

2010-05-21  Sam Steingold  <sds@gnu.org>

	* modules/pari/Makefile.in (pari.o): pass -I. first thing to CC
	so that pari/config.h was included instead of the clisp config.h

2010-05-18  Sam Steingold  <sds@gnu.org>

	* modules/postgresql/postgresql.lisp: sync with libpq-fe.h 1.147 (8.4)
	(PG_COPYRES_ATTRS,PG_COPYRES_TUPLES, PG_COPYRES_EVENTS)
	(PG_COPYRES_NOTICEHOOKS, PGresAttDesc, PQconninfoParse, PQinitOpenSSL)
	(PQcopyResult, PQsetResultAttrs, PQresultAlloc, PQsetvalue)
	(lo_import_with_oid): add
	* modules/postgresql/configure.in: check for the new functions

2010-05-18  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/bdb.c: support 4.8
	(DB_XIDDATASIZE): when undefined, use DB_GID_SIZE
	(BDB:DB-CREATE): do not accept :XA