@@ -50,11 +50,23 @@ void clispErrFlush(void) {
 }
 void clispErrDie(void);
 void clispErrDie(void) {
-  error(error_condition,GETTEXT("Internal PARI error."));
+  if (global_err_data) {
+    pushSTACK(ascii_to_string((char*)global_err_data));
+    error(error_condition,GETTEXT("PARI error: ~S"));
+  } else error(error_condition,GETTEXT("PARI error"));
+}
+
+int clisp_exception_handler (long numerr);
+int clisp_exception_handler (long numerr) {
+  if (errmessage[numerr] != NULL && global_err_data == NULL)
+    global_err_data = (void*)errmessage[numerr];
+  return 0;                     /* continue error processing */
 }
 
 PariOUT clispOut = {clispPutc, clispPuts, clispFlush, NULL};
 PariOUT clispErr = {clispErrPutc, clispErrPuts, clispErrFlush, clispErrDie};
+
+extern int (*default_exception_handler)(long);
 
 void init_for_clisp (long parisize, long maxprime)
 {
@@ -68,6 +80,7 @@ void init_for_clisp (long parisize, long maxprime)
   pari_outfile = stdout; errfile = stderr; logfile = NULL; infile = stdin;
   pariOut = &clispOut; pariErr = &clispErr;
   GP_DATA = default_gp_data();
+  default_exception_handler = &clisp_exception_handler;
 }
 
 void fini_for_clisp (int leaving)
